docs: Update README with comprehensive English documentation
- Complete rewrite in English following jedis-demo format
- Added comprehensive Features and Tech Stack sections
- Detailed Quick Start guide (Git repo → Consul → Config Server)
- Configuration file naming rules and examples
- HTTP API endpoint documentation with examples
- Git URI format comparison (absolute vs relative paths)
- Configuration merging mechanism explanation
- Security best practices (encryption, Basic Auth)
- Multi-repository configuration strategy
- Branch-based environment management
- Configuration priority and merging flow diagram
- System architecture diagram
- Consul integration and service registration guide
- Monitoring with Actuator endpoints
- Common issues troubleshooting (4 categories)
- Config Server vs other solutions comparison table
- Advanced topics (@RefreshScope, Spring Cloud Bus, Vault)
- Production deployment guide (Consul cluster, HA setup)
- Best practices for Git repository management
- Professional GitHub README format with badges
- Contact information and references

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,19 @@
 server.port=8888
 
+# 啟用錯誤響應中的 message 訊息(生產環境避免資訊洩漏，不建議使用)
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+# 生產環境避免資訊洩漏，不建議使用
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+management.endpoint.configprops.show-values=always
+management.endpoint.env.show-values=always
+# 確保 Info 端點顯示所有 info.* 屬性，這是 Spring Boot 3.x 的行為，在 Spring Boot 2.x 中不需要這個設定
+management.info.env.enabled=true
 
 spring.cloud.consul.host=localhost
 spring.cloud.consul.port=8500
 spring.cloud.consul.discovery.prefer-ip-address=true
 
-# 使用本地文件系統作為配置來源
-spring.cloud.config.server.git.uri=file:///Users/aaron/Documents/SynologyDrive/VAULT/200-AREA/arch/coding/java/spring/fengqing-spring-cloud-config-git-repo
+spring.cloud.config.server.git.uri=file:///${user.home}/workspace/SynologyDrive/java/fengqing-spring-cloud-config-git-repo
